# AviSynthPlus-EEDI3CL

./: CHANGELOG.md  CMakeLists.txt  README.md
msvc/: EEDI3CL.sln  EEDI3CL.vcxproj  EEDI3CL.vcxproj.filters
src/: EEDI3CL.cl  EEDI3CL.cpp  EEDI3CL.h  EEDI3CL.rc  EEDI3CL_AVX2.cpp  EEDI3CL_AVX512.cpp  EEDI3CL_SSE2.cpp  EEDI3CL_kernels.cl
